# OpenMapperDesktop

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.sh  build_desktop_app.sh  build_only_gui.sh  main.cc  myglwidget.cc  package.sh  run.sh
include/openmapper_desktop/: config.h  myglwidget.h  window.h
snap/: snapcraft.yaml
snap/gui/: openmapper-gui.desktop  openmapper.desktop
src/: main.cc  main.cpp  main_desktop.cpp  myglwidget.cc  window.cc  window.ui
